# Django-mimi

./: README.md  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
common/: models.py
config/settings/: base.py  development.py  production.py
config/urls/: __init__.py  development.py  production.py
transaction_history/: admin.py  models.py  serializers.py  urls.py  views.py
transaction_history/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
