[tool.poetry]
name = "django-mimi"
version = "0.1.0"
description = "python django project"
authors = ["Jung <jjlee030415@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
django-restframework = "^0.0.1"
psycopg = "^3.2.3"
pyjwt = "^2.10.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
